--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Makism Leskin <Maksim.Leskin@methed.ru>",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.3.3"
   }
 }
